[gd_scene load_steps=11 format=3 uid="uid://dyqxqv1ayua2r"]

[ext_resource type="Script" path="res://ui/stage_results/stage_results.gd" id="1_had4i"]
[ext_resource type="Texture2D" uid="uid://b4pdc8li273br" path="res://assets/nerdy_girl.jpg" id="2_jy3ai"]
[ext_resource type="Texture2D" uid="uid://cu7e0uycc4pqb" path="res://assets/pilot.jpg" id="3_itkcq"]
[ext_resource type="Texture2D" uid="uid://c032jnaue66l6" path="res://assets/spaceship.jpg" id="4_g5w0h"]
[ext_resource type="FontFile" uid="uid://on3chuy2j60p" path="res://ui/fonts/FutureKid.ttf" id="5_h7r0f"]
[ext_resource type="Texture2D" uid="uid://dxlap145yd7a0" path="res://ui/stage_results/star.png" id="6_boqdi"]
[ext_resource type="FontFile" uid="uid://dv3201q5d4liu" path="res://ui/fonts/PixelMecha.ttf" id="7_rpfw1"]
[ext_resource type="FontFile" uid="uid://bhmp00k1x74q3" path="res://ui/fonts/PixelMechaBold.ttf" id="8_o8ert"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jex25"]
bg_color = Color(0.0705882, 0.305882, 0.537255, 0.427451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.996078, 0.905882, 0.380392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kinx"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.752941, 0.796078, 0.862745, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="StageResults" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_had4i")
background_path = "res://ui/splash_screen_images"
backgrounds = Array[Texture2D]([ExtResource("2_jy3ai"), ExtResource("3_itkcq"), ExtResource("4_g5w0h")])

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("4_g5w0h")
expand_mode = 1

[node name="Scorebar" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 152.0
offset_bottom = 298.0
grow_horizontal = 2
size_flags_vertical = 0
alignment = 1

[node name="ScoreHeader" type="Label" parent="Scorebar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_h7r0f")
theme_override_font_sizes/font_size = 32
text = "SCORE"

[node name="ScoreLabel" type="Label" parent="Scorebar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("5_h7r0f")
theme_override_font_sizes/font_size = 40
text = "00000000"

[node name="HBoxContainer" type="HBoxContainer" parent="Scorebar"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Star" type="TextureRect" parent="Scorebar/HBoxContainer"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_boqdi")
stretch_mode = 2

[node name="Star2" type="TextureRect" parent="Scorebar/HBoxContainer"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("6_boqdi")

[node name="Star3" type="TextureRect" parent="Scorebar/HBoxContainer"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("6_boqdi")

[node name="Star4" type="TextureRect" parent="Scorebar/HBoxContainer"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("6_boqdi")

[node name="Star5" type="TextureRect" parent="Scorebar/HBoxContainer"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("6_boqdi")

[node name="CenterPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -19.0
offset_right = 234.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jex25")

[node name="MarginContainer" type="MarginContainer" parent="CenterPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -48.0
offset_right = 193.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="CenterPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 4

[node name="DestroyedLabel" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
text = "Enemies Destroyed:"

[node name="DestroyedCounter" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "24
"
vertical_alignment = 2

[node name="ContinuesLabel" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
text = "Credits Used:"

[node name="ContinuesCounter" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "1
"
vertical_alignment = 2

[node name="HitsLabel" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
text = "Hits Taken:"

[node name="HitsCounter" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "5
"
vertical_alignment = 2

[node name="DeathsLabel" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
text = "Times Died:"

[node name="DeathsCounter" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "3
"
vertical_alignment = 2

[node name="MultiplierLabel" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
text = "Highest Multiplier:"

[node name="MultiplierCounter" type="Label" parent="CenterPanel/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.905882, 0.380392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "8"
vertical_alignment = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 53.0
offset_right = 120.0
offset_bottom = 131.0
grow_vertical = 0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jex25")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Base" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 20
text = "STAGE"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BaseValue" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
layout_mode = 2
offset_left = 135.0
offset_top = 53.0
offset_right = 235.0
offset_bottom = 131.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_jex25")

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 20
text = "PROGRESS"
horizontal_alignment = 1

[node name="ProgressBonus" type="Label" parent="Panel2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "x100%
"
horizontal_alignment = 1

[node name="Panel3" type="Panel" parent="."]
layout_mode = 2
offset_left = 250.0
offset_top = 52.0
offset_right = 350.0
offset_bottom = 130.0
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_jex25")

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyLabel" type="Label" parent="Panel3/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 20
text = "DIFFICULTY"
horizontal_alignment = 1
vertical_alignment = 2

[node name="DifficultyBonus" type="Label" parent="Panel3/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "x1"
horizontal_alignment = 1

[node name="Panel4" type="Panel" parent="."]
layout_mode = 2
offset_left = 365.0
offset_top = 51.0
offset_right = 465.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_jex25")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BossDefeated" type="Label" parent="Panel4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 20
text = "BOSS
KILLED
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BossBonus" type="Label" parent="Panel4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "x2
"
horizontal_alignment = 1

[node name="Panel5" type="Panel" parent="."]
layout_mode = 2
offset_left = 480.0
offset_top = 51.0
offset_right = 580.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_jex25")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedKill" type="Label" parent="Panel5/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 20
text = "SPEED 
BONUS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="SpeedBonus" type="Label" parent="Panel5/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_o8ert")
theme_override_font_sizes/font_size = 24
text = "10
"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -205.0
offset_top = -50.0
offset_right = -105.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.0941176, 0.0784314, 0.145098, 1)
theme_override_colors/font_pressed_color = Color(0.0705882, 0.305882, 0.537255, 1)
theme_override_colors/font_hover_color = Color(0, 0.6, 0.858824, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_3kinx")
action_mode = 0
text = "Retry
"

[node name="ContinueButton" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 93.0
offset_top = -50.0
offset_right = 193.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.0941176, 0.0784314, 0.145098, 1)
theme_override_colors/font_pressed_color = Color(0.0705882, 0.305882, 0.537255, 1)
theme_override_colors/font_hover_color = Color(0, 0.6, 0.858824, 1)
theme_override_fonts/font = ExtResource("7_rpfw1")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_3kinx")
action_mode = 0
text = "Continue
"

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
